# SayonLab

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: plotting_quickstart.py
sayonlab/: ARCHITECTURE.md  __init__.py  stats.py
sayonlab/plots/: __init__.py  base.py  core.py  export.py  style.py  validation.py
tests/: conftest.py
tests/plots/: test_core.py
