[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sayonlab"
version = "0.1.0"
description = "A scientific Python library for researchers."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Sayon Mitra",email = "sayonmitracode@gmail.com"}
]

dependencies = [
  "numpy>=2.0",
  "pandas>=2.0",
  "matplotlib>=3.9",
  "scipy>=1.13"
]

[tool.setuptools.packages.find]
include = ["sayonlab*"]